style(Sidebar): fix sidebar collapse btn styles

--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -28,6 +28,7 @@
   position: absolute;
   bottom: 40px;
   right: -40px;
+  border-radius: none;
   border: none;
   display: flex;
   align-items: center;
